--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 }
 
 
-#info-text{
+#info-text {
     padding: 10px;
     margin: 5px;
     border-radius: 10px;
@@ -34,4 +34,15 @@ div.simulation-config {
 
 .range-value-string {
     width: 100%;
+}
+
+
+.links line {
+    stroke: #999;
+    stroke-opacity: 0.6;
+}
+
+.nodes circle {
+    stroke: #fff;
+    stroke-width: 1.5px;
 }
