--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,25 @@ div.simulation-config {
     height: 50%;
     width: 100%;
 }
+
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.svg-content {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.btn-outline-primary {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 90%;
+}
