--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ div.simulation-config {
     fill: lightslategray;
 }
 
+.networkNodeActive {
+    fill: lightslategray;
+}
+
 #svg {
     background-color: ivory;
     border-style: solid;
