--- a/css/main.css
+++ b/css/main.css
@@ -97,3 +97,38 @@ div.tooltip {
     box-shadow: 3px 3px 10px rgba(0, 0, 0, .5);
     pointer-events: none;
 }
+
+#box-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.NodeArrayElement {
+    flex-flow: column;
+    width: 50px;
+    max-width: 30px;
+    height: 50px;
+    margin: 5px;
+    border-radius: 25px;
+    background-color: darkgray;
+}
+
+.inactiveNodeArrayElement {
+    flex-flow: column;
+    width: 50px;
+    max-width: 30px;
+    height: 50px;
+    margin: 5px;
+    border-radius: 25px;
+    background-color: green;
+}
+
+.activeNodeArrayElement {
+    flex-flow: column;
+    width: 50px;
+    max-width: 30px;
+    height: 50px;
+    margin: 5px;
+    border-radius: 25px;
+    background-color: red;
+}
