--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,9 @@ div.tooltip {
 #box-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 5px;
+    margin-bottom: 15px;
 }
 
 .NodeArrayElement {
